objects/AkshayaSub__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  MONTH(TODAY())&gt;MONTH(Dob__c),
    YEAR(TODAY())-YEAR(Dob__c), 
    IF(AND(MONTH(TODAY()) = MONTH(Dob__c), DAY(TODAY()) &gt;= DAY(Dob__c)),
      YEAR(TODAY())-YEAR(Dob__c),
      (YEAR(TODAY())-YEAR(Dob__c))-1)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AkshayaTravels__c</fullName>
        <label>AkshayaTravels</label>
        <referenceTo>AkshayaTravels__c</referenceTo>
        <relationshipLabel>AkshyaSub</relationshipLabel>
        <relationshipName>AkshyaSub</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dob__c</fullName>
        <label>Dob</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoOfSeats__c</fullName>
        <externalId>true</externalId>
        <label>NoOfSeats</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceCharge__c</fullName>
        <label>PriceCharge</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rupees__c</fullName>
        <label>Rupees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalValue__c</fullName>
        <description>Need to pay by customer</description>
        <formula>PriceCharge__c  *  NoOfSeats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Need to pay by customers</inlineHelpText>
        <label>TotalValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AkshayaSub</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AkshayaSub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AkshyaSub</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>